# dieharder

./: .travis.yml  Makefile.am  QUALITY.html  QUALITY.md  README  TODO  _config.yml  configure.ac  dieharder.html.in  index.md  md.pl  rngs.lst
dieharder/: AES_OFB_g205_a.out  AES_OFB_g205_a.out.txt  AES_OFB_g205_a_Y1.out  AES_OFB_g205_a_Y1.out.txt  BEST  FAILED  GOOD  Makefile.am  R_knuth_taocp2_g405_a.out  R_knuth_taocp2_g405_a.out.txt  R_knuth_taocp_g404_a.out  R_knuth_taocp_g404_a.out.txt  R_marsaglia_multic._g401_a.out  R_marsaglia_multic._g401_a.out.txt  R_mersenne_twister_g403_a.out  R_mersenne_twister_g403_a.out.txt  R_super_duper_g402_a.out  R_super_duper_g402_a.out.txt  R_wichmann_hill_g400_a.out  R_wichmann_hill_g400_a.out.txt  Threefish_OFB_g206_a.out  Threefish_OFB_g206_a.out.txt  Threefish_OFB_g206_a_Y1.out  Threefish_OFB_g206_a_Y1.out.txt  WEAK  XOR_g207_g206_g208_a.out  XOR_g207_g206_g208_a.out.txt  XOR_g207_g23_g24_a.out  XOR_g207_g23_g24_a.out.txt  XOR_g207_g31_g29_a.out  XOR_g207_g31_g29_a.out.txt  aesni_g246_a_Y1.out  borosh13_g000_a.out  borosh13_g000_a.out.txt  ca_g203_a.out  ca_g203_a.out.txt  ca_g203_a_Y1.out  ca_g203_a_Y1.out.txt  chacha_g243_a_Y1.out  chacha_g243_a_Y1.out.txt  (+257 more)
include/: Makefile.am
include/dieharder/: dab_hwd.h  dieharder_rng_types.h  libdieharder.h  tests.h  verbose.h
libdieharder/: Makefile.am  bits.c  chisq.c  cpu_features.c  cpu_features.h  dab_filltree.c  dab_filltree2.c  dab_hwd.c  dieharder_rng_types.c  dieharder_test_types.c  rgb_operm.c  rgb_persist.c  rgb_timing.c  rng_XOR.c  rng_aesni.c  rng_ca.c  rng_chacha.c  rng_dev_arandom.c  rng_dev_random.c  rng_dev_urandom.c  rng_efiix64.c  rng_file_input.c  rng_hc128.c  rng_jsf.c  rng_lxm.c  rng_mt64.c  rng_pcg.c  rng_philox.c  rng_rdrand.c  rng_romu.c  rng_sfmt.c  rng_speck128.c  rng_splitmix64.c  rng_stdin_input_raw.c  rng_threefry.c  rng_uvag.c  rng_wyrand.c  rng_xoroshiro128p.c  rng_xoroshiro64bit.c  rng_xorshift.c  (+13 more)
manual/: Makefile.am  dieharder.html
